--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % !Mode:: "TeX:UTF-8"
-\documentclass[doctor]{bnuthesis}
+\documentclass[master]{bnuthesis}
 % \documentclass[%
 %   bachelor|master|doctor, % mandatory option
 %   xetex|pdftex|dvips|dvipdfm, % optional
@@ -41,7 +41,7 @@
 %%% 其它部分
 %\backmatter
 
-% 
+%
 % % 参考文献
  \bibliographystyle{bnubib}
  \bibliography{ref/refs}
@@ -50,7 +50,7 @@
 \begin{appendix}
 \input{data/appendix01}
 \end{appendix}
-% 
+%
 % % 学术成果
 \include{data/paper}
 
