--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1,66 +1,78 @@
-@book{IEEE-1363,
-  author={{IEEE Std 1363-2000}},
-  title={{IEEE} Standard Specifications for Public-Key Cryptography},
-  address={New York},
-  publisher={IEEE},
-  year={2000}
+@article{lishihua2005,
+  title={遥感图像分类方法研究综述},
+  author={李石华 and 王金亮 and 毕艳 and 陈姚 and 朱妙园 and 杨帅 and 朱佳},
+  journal={国土资源遥感},
+  volume={2},
+  number={5},
+  pages={1--6},
+  year={2005}
 }
 
-@inproceedings{kocher99,
-  author={C. Kocher and J. Jaffe and B. Jun},
-  title={Differential Power Analysis},
-  editor={M. Wiener},
-  booktitle={Advances in Cryptology ({CRYPTO}~'99)},
-  series={Lecture Notes in Computer Science},
-  volume={1666},
-  pages={388-397},
-  publisher={Springer-Verlag},
-  month={August},
-  year={1999}
+@article{zhangjun2010,
+  title={面向对象的高分辨率影像分类与信息提取},
+  author={张俊 and 于庆国 and 侯家槐},
+  journal={遥感技术与应用},
+  volume={25},
+  number={1},
+  pages={112--117},
+  year={2010}
 }
 
-
-@INCOLLECTION{Krasnogor2004e,
-  AUTHOR = {N. Krasnogor},
-  TITLE = {Towards robust memetic algorithms},
-  BOOKTITLE = {Recent Advances in Memetic Algorithms},
-  PUBLISHER = {Springer Berlin Heidelberg},
-  YEAR = {2004},
-  PAGES = {185-207},
-  EDITOR = {W.E. Hart and N. Krasnogor and J.E. Smith},
-  VOLUME = {166},
-  SERIES = {Studies in Fuzziness and Soft Computing},  
-  ADDRESS = {New York},  
+@phdthesis{wulun2006,
+  title={地理信息系统数据的不确定性问题},
+  author={邬伦 and 承继成 and 史文中 and others},
+  year={2006}
 }
 
-@Book{companion,
- author    = "Michel Goosens and Frank Mittelbach and Alexander Samarin",
- title     = "The {\LaTeX} Companion",
- publisher = "Addison-Wesley Publishing Company",
- address   = "Reading, MA",
- PAGES = "112--125",
- year      = 1994,
+@inproceedings{he2005comparison,
+  title={A comparison of PCA/ICA for data preprocessing in remote sensing imagery classification},
+  author={He, Hui and Yu, Xianchuan},
+  booktitle={MIPPR 2005: Image Analysis Techniques},
+  volume={6044},
+  pages={604408},
+  year={2005},
+  organization={International Society for Optics and Photonics}
 }
 
-
-@ARTICLE{MELLINGER96,
-  AUTHOR =       "Mellinger, A. and Vidal, C. R. and Jungen, Ch.",
-  TITLE =        "Laser reduced fluorescence study of the carbon-monoxide nd
-                  triplet {R}ydberg series-experimental results and multichannel
-                  quantum-defect analysis",
-  JOURNAL =      "J. Chem. Phys.",
-  PAGES =        "8913-8921",
-  VOLUME =       104,
-  NUMBER =       5,
-  YEAR =         1996,
+@article{lideren2012,
+  title={高分辨率对地观测的若干前沿科学问题},
+  author={李德仁 and 童庆禧 and 李荣兴 and 龚健雅 and 张良培 and others},
+  journal={中国科学: 地球科学},
+  volume={42},
+  number={6},
+  pages={805--813},
+  year={2012}
 }
 
-@ARTICLE{SHELL02,
-  AUTHOR =       "Michael Shell",
-  TITLE =        "How to Use the {IEEEtran \LaTeX} Class",
-  JOURNAL =      "Journal of {\LaTeX} Class Files",
-  YEAR =         2002,
-  VOLUME =       12,
-  NUMBER =       4,
-  PAGES =        "100--120"
+@incollection{NIPS2012_4824,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+
+@article{hinton2006fast,
+  title={A fast learning algorithm for deep belief nets},
+  author={Hinton, Geoffrey E and Osindero, Simon and Teh, Yee-Whye},
+  journal={Neural computation},
+  volume={18},
+  number={7},
+  pages={1527--1554},
+  year={2006},
+  publisher={MIT Press}
+}
+
+@article{bengio2009learning,
+  title={Learning deep architectures for AI},
+  author={Bengio, Yoshua and others},
+  journal={Foundations and trends{\textregistered} in Machine Learning},
+  volume={2},
+  number={1},
+  pages={1--127},
+  year={2009},
+  publisher={Now Publishers, Inc.}
 }
