--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -4,17 +4,10 @@
 %%% TeX-master: t
 %%% End:
 
-\chapter{方法一}
+\chapter{基于改进的区间二型模糊集的遥感影像聚类分割}
 \label{cha:chap03}
 
-
-
-小老鼠偷吃热凉粉；短长虫环绕矮高粱。\footnote{韩愈（768-824），字退之，河南河阳（
-  今河南孟县）人，自称郡望昌黎，世称韩昌黎。幼孤贫刻苦好学，德宗贞元八年进士。曾
-  任监察御史，因上疏请免关中赋役，贬为阳山县令。后随宰相裴度平定淮西迁刑部侍郎，
-  又因上表谏迎佛骨，贬潮州刺史。做过吏部侍郎，死谥文公，故世称韩吏部、韩文公。是
-  唐代古文运动领袖，与柳宗元合称韩柳。诗力求险怪新奇，雄浑重气势。}
-
+由于遥感影像数据固有的不确定性，模糊C-均值聚类（FCM）方法被广泛应用到遥感影像聚类分割中。另外，随着高分辨率遥感影像包含细节与特征信息，遥感影像聚类处理的对象由传统的基于像元发展为面向对象的聚类分割。
 
 \section{封面相关}
 封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
