--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -9,7 +9,7 @@
 
 由于遥感影像数据固有的不确定性，模糊C-均值聚类（FCM）方法被广泛应用到遥感影像聚类分割中。另外，随着高分辨率遥感影像包含细节与特征信息，遥感影像聚类处理的对象由传统的基于像元发展为面向对象的聚类分割。
 
-\section{封面相关}
+\section{三角形模糊集值的建模}
 封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
 和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
 
