--- a/data/paper.tex
+++ b/data/paper.tex
@@ -2,7 +2,24 @@
 \begin{paper}
 \begin{enumerate}
   \item \textbf{Tao Jiang}, Dan Hu, and Xianchuan Yu.  Enhanced IT2FCM algorithm using object-based triangular fuzzy set modeling for remote-sensing clustering[J]. Computers \& geosciences, 2018, 118: 14-26. (SCI 三区收录, 检索号:GQ6TC.)
-  \item Dan Hu, \textbf{Tao Jiang}, and Xianchuan Yu. The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)
+  \item Dan Hu, \textbf{Tao Jiang}, and Xianchuan Yu. The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)\\
   \end{enumerate}
 
 \end{paper}
+
+
+% \hspace*{6em}
+
+
+
+\begin{center}
+  \Large 作者攻读硕士学位期间主要参与的项目
+\end{center}
+
+\begin{enumerate}[(1)]
+\item 自适应循优$n$型模糊系统及其应用研究, 国家自然科学基金面上项目（11471045），2015.01-2018.12.
+
+\item 基于稀疏成分分析的找矿信息识别，国家自然科学基金面上项目（41672323），2017.01-2020.12.
+
+\end{enumerate}
+
