--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -76,3 +76,121 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2009},
   publisher={Now Publishers, Inc.}
 }
+
+@article{zhangyongsheng2004,
+  title={高分辨率遥感卫星应用},
+  author={张永生 and 巩丹超 and 刘军 and others},
+  journal={科学出版社, 北京},
+  year={2004}
+}
+
+@article{wacker1972minimum,
+  title={Minimum distance classification in remote sensing},
+  author={Wacker, AG and Landgrebe, DA},
+  year={1972}
+}
+
+@article{strahler1980use,
+  title={The use of prior probabilities in maximum likelihood classification of remotely sensed data},
+  author={Strahler, Alan H},
+  journal={Remote sensing of Environment},
+  volume={10},
+  number={2},
+  pages={135--163},
+  year={1980},
+  publisher={Elsevier}
+}
+
+@article{atkinson2000geostatistical,
+  title={Geostatistical classification for remote sensing: an introduction},
+  author={Atkinson, Peter M and Lewis, P},
+  journal={Computers \& Geosciences},
+  volume={26},
+  number={4},
+  pages={361--371},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{paul2002new,
+  title={The new remote-sensing-derived Swiss glacier inventory: I. Methods},
+  author={Paul, Frank and K{\"a}{\"a}b, Andreas and Maisch, Max and Kellenberger, Tobias and Haeberli, Wilfried},
+  journal={Annals of Glaciology},
+  volume={34},
+  pages={355--361},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@article{blaschke2010object,
+  title={Object based image analysis for remote sensing},
+  author={Blaschke, Thomas},
+  journal={ISPRS journal of photogrammetry and remote sensing},
+  volume={65},
+  number={1},
+  pages={2--16},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{jensen1987introductory,
+  title={Introductory digital image processing: a remote sensing perspective},
+  author={Jensen, John R and Lulla, Kalmesh},
+  year={1987},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{djukanovic1993unsupervised,
+  title={Unsupervised/supervised learning concept for 24-hour load forecasting},
+  author={Djukanovic, MBDY and Babic, Borivoje and Sobajic, Dijan J and Pao, Y-H},
+  booktitle={IEE Proceedings C (Generation, Transmission and Distribution)},
+  volume={140},
+  number={4},
+  pages={311--318},
+  year={1993},
+  organization={IET}
+}
+
+@article{kettig1976classification,
+  title={Classification of multispectral image data by extraction and classification of homogeneous objects},
+  author={Kettig, Robert Lawrence and Landgrebe, DA},
+  journal={IEEE Transactions on geoscience Electronics},
+  volume={14},
+  number={1},
+  pages={19--26},
+  year={1976},
+  publisher={IEEE}
+}
+
+@article{lobo1996classification,
+  title={Classification of Mediterranean crops with multisensor data: per-pixel versus per-object statistics and image segmentation},
+  author={Lobo, A and Chic, O and Casterad, A},
+  journal={International Journal of Remote Sensing},
+  volume={17},
+  number={12},
+  pages={2385--2400},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+@article{geneletti2003method,
+  title={A method for object-oriented land cover classification combining Landsat TM data and aerial photographs},
+  author={Geneletti, D and Gorte, BGH},
+  journal={International Journal of Remote Sensing},
+  volume={24},
+  number={6},
+  pages={1273--1286},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{guo2007object,
+  title={An object-based classification approach in mapping tree mortality using high spatial resolution imagery},
+  author={Guo, Qinghua and Kelly, Maggi and Gong, Peng and Liu, Desheng},
+  journal={GIScience \& Remote Sensing},
+  volume={44},
+  number={1},
+  pages={24--47},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
