--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -20,24 +20,30 @@
 
 影像分类与目标识别是遥感影像分析和应用的重要内容，如何准确、快速地对遥感影像分类与识别是当前遥感应用领域的研究热点。传统的遥感影像分类方法从人工目视解译发展到人机交互解译，再到半自动解译，最后到当前基于机器学习模型和人工智能技术的全自动解译发展过程；影像分类模型则由传统的像元解译、局部结构特征提取发展到了面向对象识别的阶段；分类器也从单一的分类器发展为层叠或多个分类器相结合的方法\cite{lideren2012}。基于新兴理论提出的新技术、新方法在遥感影像分类与识别研究中取得了较好的识别效果，提升了影像识别的精度。然而，由于遥感影像存在混合像元，同物异谱和同谱异物等问题\cite{wulun2006}，遥感影像数据固有的不确定性成为影像分类亟需解决的问题，如果能构建适当模型描述影像地物数据，进而提取目标地物特征信息，这将成为影像分类与目标识别的新思路\cite{he2005comparison}。 同时，遥感影像数据普遍存在样本少、数据分布不均衡等特点，获取有标签的影像数据是昂贵、耗时的，需要极大的时间和人力成本，研究基于少样本的半自动或全自动的影像分类与目标识别方法有着重要的意义。
 
+模糊聚类的优势。。。
+
+深度学习优势。。
+
 本文将从刻画遥感影像数据的不确定性和少样本数据分类两个角度，对高分辨率遥感影像数据进行分析与处理，分别提出新的面向对象的区间二型模糊聚类方法用于遥感影像聚类和基于生成对抗网络的弱监督学习方法用于影像分类与识别， 将影像数据分类与识别结果与验证集 ground-truth 图进行比对，验证本文提出的两种方法在遥感影像分类与识别中的有效性。此外，本文综合提出的两种方法，形成一个完整的处理流程，实现高分辨率影像数据的信息提取与分类识别。
 
 
 
 \section{国内外研究现状}
 \label{sec:second}
-本节内容主要介绍了高分辨率遥感影像分类识别、遥感影像的聚类分割和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 图像识别分类的研究进展和现状。
+为了方便介绍，本文中将深度学习方法之前的遥感影像分类方法称为传统的遥感影像分类方法。本节内容主要介绍了传统的高分辨率遥感影像分类识别方法和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 的遥感影像识别分类方法的研究进展和现状。 
+% ，遥感影像的聚类分割
 
-\subsection{高分辨率遥感影像分类现状}
+\subsection{传统的高分辨率遥感影像分类与识别方法}
 \label{subsec:1-2-1}
-目标地物的分类与识别一直以来都是遥感影像解译
+早在1957年，卫星遥感技术就应用到遥感影像分类与识别任务中。目标地物的分类与识别一直以来都是遥感影像分析中的一个基础任务，对于研究目标物体或现象的发展过程与分布规律有着重要意义\cite{jensen1987introductory}。遥感影像分类方法依据是否使用地物类别先验知识分为监督分类和非监督分类。监督分类是指利用样本已有先验类别训练分类模型，模型能够建立样本特征到类别标签的决策映射规则； 非监督分类是指在缺乏样本类别先验知识的前提下，只根据样本数据本身特性进行分类，根据样本相似度划分类别，典型如聚类\cite{djukanovic1993unsupervised}。根据分类单元不同，遥感影像的分类方法可划分为基于像元和面向对象的分类。基于像元的分类方法以像元的光谱信息作为主要依据进行分类，常见的基于像元的遥感影像分类方法有：最小距离分析法\cite{wacker1972minimum}，最大似然分类法\cite{strahler1980use}，K-均值聚类法\cite{atkinson2000geostatistical} 和 ISODATA 聚类法\cite{paul2002new}等。随着遥感技术不断发展与成熟，遥感影像空间分辨率不断提高。一般地，我们将空间分辨率高于 $5m$ 遥感影像称作高分辨率遥感影像\cite{zhangyongsheng2004}。高分辨率影像相比低分辨率影像来说光谱信息相对匮乏，而高分辨率影像的几何、纹理等信息却更加丰富。基于像元的分类方法应用到高分辨率影像中会导致影像解译速度慢，同时椒盐噪声极易产生，因而其不适用于高分辨率影像分类\cite{blaschke2010object}。
 
+面向对象的高分辨率影像分类方法将影像中邻域同质像元组成的对象作为分类单元，充分利用影像地物的形状、纹理等特征, 更适合高分辨率影像分类与识别\cite{zhangyongsheng2004}。 早在1976年，Kettig 和 Robert \cite{kettig1976classification}就将面向对象的思想引入遥感影像研究领域中。随后，Lobo 和 Chic 等人 \cite{lobo1996classification} 将面向对象分类方法应用到遥感影像分类中，通过实验证明了在高分辨率影像识别任务中面向对象的分类方法比基于像元的方法识别速度更快，分类精度更高。Geneletti \cite{geneletti2003method} 和 Guo \cite{guo2007object} 分别从非监督分类的研究方向表明面向对象分类方法是基于像元方法的有效替代。
 
-\subsection{遥感影像的聚类分割现状}
-\label{subsec:1-2-2}
-ceshier
+%\subsection{遥感影像的聚类分割现状}
+%\label{subsec:1-2-2}
+%ceshier
 
-\subsection{基于深度学习技术图像识别分类的研究现状}
+\subsection{基于深度学习技术影像识别与分类研究现状}
 \label{subsec:1-2-3}
 顶顶顶
 
