--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -194,3 +194,234 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2007},
   publisher={Taylor \& Francis}
 }
+
+
+@article{chenjie2010,
+  title={高分辨率遥感影像面向对象分类方法研究},
+  author={陈杰},
+  journal={长沙: 中南大学},
+  year={2010}
+}
+
+@inproceedings{baatz1999object,
+  title={Object-oriented and multi-scale image analysis in semantic networks},
+  author={Baatz, Martin},
+  booktitle={Proc. the 2nd International Symposium on Operationalization of Remote Sensing, Enschede, ITC, Aug. 1999},
+  year={1999}
+}
+
+@article{giada2003information,
+  title={Information extraction from very high resolution satellite imagery over Lukole refugee camp, Tanzania},
+  author={Giada, S and De Groeve, T and Ehrlich, D and Soille, P},
+  journal={International Journal of Remote Sensing},
+  volume={24},
+  number={22},
+  pages={4251--4266},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@incollection{canny1987computational,
+  title={A computational approach to edge detection},
+  author={Canny, John},
+  booktitle={Readings in computer vision},
+  pages={184--203},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{otsu1979threshold,
+  title={A threshold selection method from gray-level histograms},
+  author={Otsu, Nobuyuki},
+  journal={IEEE transactions on systems, man, and cybernetics},
+  volume={9},
+  number={1},
+  pages={62--66},
+  year={1979},
+  publisher={IEEE}
+}
+
+@article{vincent1991watersheds,
+  title={Watersheds in digital spaces: an efficient algorithm based on immersion simulations},
+  author={Vincent, Luc and Soille, Pierre},
+  journal={IEEE Transactions on Pattern Analysis \& Machine Intelligence},
+  number={6},
+  pages={583--598},
+  year={1991},
+  publisher={IEEE}
+}
+
+@article{achanta2012slic,
+  title={SLIC superpixels compared to state-of-the-art superpixel methods},
+  author={Achanta, Radhakrishna and Shaji, Appu and Smith, Kevin and Lucchi, Aurelien and Fua, Pascal and S{\"u}sstrunk, Sabine},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={34},
+  number={11},
+  pages={2274--2282},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{weizman2009urban,
+  title={Urban-area segmentation using visual words},
+  author={Weizman, Lior and Goldberger, Jacob},
+  journal={IEEE Geoscience and Remote Sensing Letters},
+  volume={6},
+  number={3},
+  pages={388--392},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{lienou2010semantic,
+  title={Semantic annotation of satellite images using latent Dirichlet allocation},
+  author={Lienou, Marie and Maitre, Henri and Datcu, Mihai},
+  journal={IEEE Geoscience and Remote Sensing Letters},
+  volume={7},
+  number={1},
+  pages={28--32},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{he2016remote,
+  title={Remote sensing clustering analysis based on object-based interval modeling},
+  author={He, Hui and Liang, Tianheng and Hu, Dan and Yu, Xianchuan},
+  journal={Computers \& Geosciences},
+  volume={94},
+  pages={131--139},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{pal2005random,
+  title={Random forest classifier for remote sensing classification},
+  author={Pal, Mahesh},
+  journal={International Journal of Remote Sensing},
+  volume={26},
+  number={1},
+  pages={217--222},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@article{suykens1999least,
+  title={Least squares support vector machine classifiers},
+  author={Suykens, Johan AK and Vandewalle, Joos},
+  journal={Neural processing letters},
+  volume={9},
+  number={3},
+  pages={293--300},
+  year={1999},
+  publisher={Springer}
+}
+
+@book{haykin1994neural,
+  title={Neural networks},
+  author={Haykin, Simon},
+  volume={2},
+  year={1994},
+  publisher={Prentice hall New York}
+}
+
+@article{friedl1997decision,
+  title={Decision tree classification of land cover from remotely sensed data},
+  author={Friedl, Mark A and Brodley, Carla E},
+  journal={Remote sensing of environment},
+  volume={61},
+  number={3},
+  pages={399--409},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@inproceedings{freund1996experiments,
+  title={Experiments with a new boosting algorithm},
+  author={Freund, Yoav and Schapire, Robert E and others},
+  booktitle={icml},
+  volume={96},
+  pages={148--156},
+  year={1996},
+  organization={Citeseer}
+}
+
+
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{szegedy2015going,
+  title={Going deeper with convolutions},
+  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1--9},
+  year={2015}
+}
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
+@article{rumelhart1988learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J and others},
+  journal={Cognitive modeling},
+  volume={5},
+  number={3},
+  pages={1},
+  year={1988}
+}
+
+@inproceedings{goodfellow2014generative,
+  title={Generative adversarial nets},
+  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  booktitle={Advances in neural information processing systems},
+  pages={2672--2680},
+  year={2014}
+}
+
+@article{ng2011sparse,
+  title={Sparse autoencoder},
+  author={Ng, Andrew and others},
+  journal={CS294A Lecture notes},
+  volume={72},
+  number={2011},
+  pages={1--19},
+  year={2011},
+  publisher={Stanford University}
+}
+
+@inproceedings{bengio2007greedy,
+  title={Greedy layer-wise training of deep networks},
+  author={Bengio, Yoshua and Lamblin, Pascal and Popovici, Dan and Larochelle, Hugo},
+  booktitle={Advances in neural information processing systems},
+  pages={153--160},
+  year={2007}
+}
+
+@inproceedings{vincent2008extracting,
+  title={Extracting and composing robust features with denoising autoencoders},
+  author={Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={1096--1103},
+  year={2008},
+  organization={ACM}
+}
