add chap01 contents

--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -7,12 +7,6 @@
 \chapter{绪论}
 \label{cha:chap01}
 
-这是 \bnuthesis{} 的示例文档，基本上覆盖了模板中所有格式的设置。建议大家在使用模
-板之前，除了阅读《\bnuthesis{}用户手册》，这个示例文档也最好能看一看。
-
-小老鼠偷吃热凉粉；短长虫环绕矮高粱。\footnote{韩愈（768-824），字退之，}
-
-
 \section{研究背景及意义}
 \label{sec:first}
 
@@ -39,18 +33,46 @@
 
 面向对象的高分辨率影像分类方法将影像中邻域同质像元组成的对象作为分类单元，充分利用影像地物的形状、纹理等特征, 更适合高分影像分类与识别\cite{zhangyongsheng2004}。 早在1976年，Kettig 和 Robert \cite{kettig1976classification} 就将面向对象的思想引入遥感影像研究领域中。随后，Lobo 等人 \cite{lobo1996classification} 将面向对象分类方法应用到遥感影像分类中，通过实验证明了在高分影像识别任务中面向对象的分类方法比基于像元的方法识别速度更快，分类精度更高。Baatz \cite{baatz1999object} 基于高分辨率遥感影像特性，系统地提出高分影像的面向对象分类方法。之后，面向对象分类方法被广泛应用到高分影像分类识别任务中，发展迅速。 Geneletti \cite{geneletti2003method} 和 Guo \cite{guo2007object} 分别从非监督分类的研究方向表明面向对象分类方法是基于像元方法的有效替代。在工业应用领域，德国 Definiens 公司于2009 年开发的 Ecognition 影像分析软件极大的推动了面向对象的高分影像分类方法的商业发展，同时也表明了面向对象的高分影像方法的成熟。
 
-一般的， 面向对象的遥感影像分类方法通常包含三个部分： 影像分割，特征提取和分类识别。 高分影像因其空间分辨率高，纹理、形状等空间信息相对丰富，分割方法和精度便成为影像分割的关键要素。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等人结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，该方法目前被广泛应用到影像分割中。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等人\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论的相关方法，设计一种区间值特征来提取目标地物的特征，用于面向对象的非监督分类。目前，在特征提取的方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是针对特征提取阶段获得的分割对象的特征，利用分类器对待识别目标进行分类识别。目前，常用的机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
+一般的， 面向对象的遥感影像分类方法通常包含三个部分： 影像分割，特征提取和分类识别。 高分影像因其空间分辨率高，纹理、形状等空间信息相对丰富，分割方法和精度便成为影像分割的关键要素。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，该方法目前被广泛应用到影像分割中。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论的相关方法，设计一种区间值特征来提取目标地物的特征，用于面向对象的非监督分类。目前，在特征提取的方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是针对特征提取阶段获得的分割对象的特征，利用分类器对待识别目标进行分类识别。目前，常用的机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
 
 然而，传统的高分影像的分类与识别方法只应用到影像中、低层特征，无法充分表达影像信息，而采用的影像分类器大多是只有 $1\sim2$ 层的浅层结构模型，无法充分学习和表达遥感影像复杂的数据结构和特征信息。因此，研究结构更复杂，表达能力更强的分类识别模型具有必要的意义。
 
 \subsection{基于深度学习技术影像识别与分类研究现状}
 \label{subsec:1-2-2}
-深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习通过组合低层特征形成更加抽象的高层表示属性类别或特征，从大量数据中自动学习数据的特征表示。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理，语音识别，搜索推荐，游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像进行分类，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习算法模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Net，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了无监督学习和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。
+深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习通过组合低层特征形成更加抽象的高层表示属性类别或特征，从大量数据中自动学习数据的特征表示。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像进行分类，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习算法模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Net，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了无监督学习和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。随后，基于GAN 网络的一系列无监督学习方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
+
+由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分辨率遥感影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，文中提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积网络（Fully convolutional network，FCN）结构，对影像进行四层卷积下采样提取特征，接着四层反卷积对特征图上采样回初始影像分辨率，输出所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
+
+
+\subsection{存在的主要问题}
+\label{subsec:1-2-3}
+结合高分影像研究现状可知，影像分类与识别方法都比较成熟。传统机器学习分类方法只能提取浅层特征，且分类器结构相对简单。基于深度学习理论的影像分类方法具有很大的应用潜力，但是其需要大量标记好的训练样本，且对于遥感影像同物异谱、同谱异物等不确定性难以刻画。
 
 \section{本文的组织结构}
 \label{sec:third}
-封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和
+本文主要从表征遥感影像不确定性和少样本影像分类两个角度对高分影像进行分类与识别研究。论文依据研究内容可划分为六个章节，各章节依次为：
+
+第 \textbf{1} 章：介绍 矿产资源 预测 的背景及地球化学找矿 的意义，调研了国内外地球化学异 义，调研了国内外地球化学异 常提取、元素组合 常提取、元素组合 异常提取 的现状，对 的现状，对 经典方法和 主流 方法做了 分析 和介绍， 归纳了一些 方法存在的不足 ，并 针对这些问题，提出了解决 方案， 引出本文 的主要研究内容。
+
+第 \textbf{2} 章： 详细介绍 了研究区 整体的概况， 包括地层、 侵入岩 等地质信息， 在研究区内 选取了 四块比较 典型的选区 作为 实验对象， 从地质背景和 地化特征 角度对 这些地区 进行介 绍，为后面 章节的实验部分提供依据。 此外，本章 此外，本章 还针对数据 特点详细介绍了数据预处理 的方法。
+
+第 \textbf{3} 章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 邻域约束 聚类的地球化学异常提取 方法的原 理、算法流程，并将该应用在 理、算法流程，并将该应用在 高贝沟 、孤山岭 孤山岭 、长水 地区的球化学异常提取上，对 地区的球化学异常提取上，对 地区的球化学异常提取上，对
+基于邻域约束聚类及局部相关系数的地球化学异常提取。
+
+第 \textbf{4} 章：介绍 矿产资源 预测 的背景及地球化学找矿 的意义，调研了国内外地球化学异 义，调研了国内外地球化学异 常提取、元素组合 常提取、元素组合 异常提取 的现状，对 的现状，对 经典方法和 主流 方法做了 分析 和介绍， 归纳了一些 方法存在的不足 ，并 针对这些问题，提出了解决 方案， 引出本文 的主要研究内容。
+
+第 \textbf{5} 章： 详细介绍 了研究区 整体的概况， 包括地层、 侵入岩 等地质信息， 在研究区内 选取了 四块比较 典型的选区 作为 实验对象， 从地质背景和 地化特征 角度对 这些地区 进行介 绍，为后面 章节的实验部分提供依据。 此外，本章 此外，本章 还针对数据 特点详细介绍了数据预处理 的方法。
+
+第 \textbf{6} 章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 邻域约束 聚类的地球化学异常提取 方法的原 理、算法流程，并将该应用在 理、算法流程，并将该应用在 高贝沟 、孤山岭 孤山岭 、长水 地区的球化学异常提取上，对 地区的球化学异常提取上，对 地区的球化学异常提取上，对
+基于邻域约束聚类及局部相关系数的地球化学异常提取。
+
 
 \section{本文主要创新点}
 \label{sec:forth}
-封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和
+本文研究内容主要有三个创新点：
+\begin{enumerate}[(1)]
+    \item 首次从地球化学异常的形态角度提取， 提出基于空间 邻域 约束 聚类 的地球化学异常提取方法 。
+    \item 将元素组 合异常与空间位置综考虑，提出基于局部相关系数的地球化学将元素组 合异常与空间位置综考虑，提出基于局部相关系数的地球化学合异常提取方法 。
+    \item 将综合本章提出 的两种方法 分析全区 数据， 结合 地质信息 进行 综合分析， 探索 异 常与矿点的关系， 预测 出找矿靶区， 更好 的指导找矿。
+
+\end{enumerate}
