--- a/data/paper.tex
+++ b/data/paper.tex
@@ -13,13 +13,13 @@
 
 
 \begin{center}
-  \large 作者攻读硕士学位期间主要参与的项目
+  \large 研究生期间主要参与项目
 \end{center}
 
 \begin{enumerate}[(1)]
 \item 自适应循优 $n$ 型模糊系统及其应用研究, 国家自然科学基金面上项目（11471045），2015.01-2018.12.
 
-\item 基于稀疏成分分析的找矿信息识别，国家自然科学基金面上项目（41672323），2017.01-2020.12.
+\item 基于稀疏成分分析的找矿信息识别，国家自然科学基金面上项目（41672323），2017.01-2020.12.\\
 
 \end{enumerate}
 
