--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -230,6 +230,15 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   publisher={Elsevier}
 }
 
+@inproceedings{maggiori2016fully,
+  title={Fully convolutional neural networks for remote sensing image classification},
+  author={Maggiori, Emmanuel and Tarabalka, Yuliya and Charpiat, Guillaume and Alliez, Pierre},
+  booktitle={2016 IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
+  pages={5071--5074},
+  year={2016},
+  organization={IEEE}
+}
+
 @article{otsu1979threshold,
   title={A threshold selection method from gray-level histograms},
   author={Otsu, Nobuyuki},
@@ -424,4 +433,100 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   pages={1096--1103},
   year={2008},
   organization={ACM}
+}
+
+@article{mirza2014conditional,
+  title={Conditional generative adversarial nets},
+  author={Mirza, Mehdi and Osindero, Simon},
+  journal={arXiv preprint arXiv:1411.1784},
+  year={2014}
+}
+
+@article{radford2015unsupervised,
+  title={Unsupervised representation learning with deep convolutional generative adversarial networks},
+  author={Radford, Alec and Metz, Luke and Chintala, Soumith},
+  journal={arXiv preprint arXiv:1511.06434},
+  year={2015}
+}
+
+@inproceedings{chen2016infogan,
+  title={Infogan: Interpretable representation learning by information maximizing generative adversarial nets},
+  author={Chen, Xi and Duan, Yan and Houthooft, Rein and Schulman, John and Sutskever, Ilya and Abbeel, Pieter},
+  booktitle={Advances in neural information processing systems},
+  pages={2172--2180},
+  year={2016}
+}
+
+@article{arjovsky2017wasserstein,
+  title={Wasserstein gan},
+  author={Arjovsky, Martin and Chintala, Soumith and Bottou, L{\'e}on},
+  journal={arXiv preprint arXiv:1701.07875},
+  year={2017}
+}
+
+@article{hu2015transferring,
+  title={Transferring deep convolutional neural networks for the scene classification of high-resolution remote sensing imagery},
+  author={Hu, Fan and Xia, Gui-Song and Hu, Jingwen and Zhang, Liangpei},
+  journal={Remote Sensing},
+  volume={7},
+  number={11},
+  pages={14680--14707},
+  year={2015},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{castelluccio2015land,
+  title={Land use classification in remote sensing images by convolutional neural networks},
+  author={Castelluccio, Marco and Poggi, Giovanni and Sansone, Carlo and Verdoliva, Luisa},
+  journal={arXiv preprint arXiv:1508.00092},
+  year={2015}
+}
+
+@article{romero2016unsupervised,
+  title={Unsupervised deep feature extraction for remote sensing image classification},
+  author={Romero, Adriana and Gatta, Carlo and Camps-Valls, Gustau},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={54},
+  number={3},
+  pages={1349--1362},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{kampffmeyer2016semantic,
+  title={Semantic segmentation of small objects and modeling of uncertainty in urban remote sensing images using deep convolutional neural networks},
+  author={Kampffmeyer, Michael and Salberg, Arnt-Borre and Jenssen, Robert},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition workshops},
+  pages={1--9},
+  year={2016}
+}
+
+@inproceedings{ronneberger2015u,
+  title={U-net: Convolutional networks for biomedical image segmentation},
+  author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+  booktitle={International Conference on Medical image computing and computer-assisted intervention},
+  pages={234--241},
+  year={2015},
+  organization={Springer}
+}
+
+@article{li2018deepunet,
+  title={Deepunet: A deep fully convolutional network for pixel-level sea-land segmentation},
+  author={Li, Ruirui and Liu, Wenjie and Yang, Lei and Sun, Shihao and Hu, Wei and Zhang, Fan and Li, Wei},
+  journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
+  number={99},
+  pages={1--9},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{zhang2018road,
+  title={Road extraction by deep residual u-net},
+  author={Zhang, Zhengxin and Liu, Qingjie and Wang, Yunhong},
+  journal={IEEE Geoscience and Remote Sensing Letters},
+  volume={15},
+  number={5},
+  pages={749--753},
+  year={2018},
+  publisher={IEEE}
 }
