add chap03 contents

--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -64,7 +64,7 @@
 第 \textbf{5} 章： 详细介绍 了研究区 整体的概况， 包括地层、 侵入岩 等地质信息， 在研究区内 选取了 四块比较 典型的选区 作为 实验对象， 从地质背景和 地化特征 角度对 这些地区 进行介 绍，为后面 章节的实验部分提供依据。 此外，本章 此外，本章 还针对数据 特点详细介绍了数据预处理 的方法。
 
 第 \textbf{6} 章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 邻域约束 聚类的地球化学异常提取 方法的原 理、算法流程，并将该应用在 理、算法流程，并将该应用在 高贝沟 、孤山岭 孤山岭 、长水 地区的球化学异常提取上，对 地区的球化学异常提取上，对 地区的球化学异常提取上，对
-基于邻域约束聚类及局部相关系数的地球化学异常提取。
+基于邻域约束聚类及局部相关系数的地球化学异常提取。hh
 
 
 \section{本文主要创新点}
