--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -530,3 +530,34 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2018},
   publisher={IEEE}
 }
+
+@article{bezdek1984fcm,
+  title={FCM: The fuzzy c-means clustering algorithm},
+  author={Bezdek, James C and Ehrlich, Robert and Full, William},
+  journal={Computers \& Geosciences},
+  volume={10},
+  number={2-3},
+  pages={191--203},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@article{yu2012method,
+  title={A method of auto classification based on object oriented unsupervised classification},
+  author={Yu, XC and An, WJ and He, Hui},
+  journal={Progress in Geophysics},
+  volume={27},
+  number={2},
+  pages={744--749},
+  year={2012}
+}
+
+@article{he2016remote,
+  title={Remote sensing clustering analysis based on object-based interval modeling},
+  author={He, Hui and Liang, Tianheng and Hu, Dan and Yu, Xianchuan},
+  journal={Computers \& Geosciences},
+  volume={94},
+  pages={131--139},
+  year={2016},
+  publisher={Elsevier}
+}
