--- a/data/chap02.tex
+++ b/data/chap02.tex
@@ -7,7 +7,7 @@
 \chapter{研究区与数据集介绍}
 \label{cha:chap02}
 
-\section{其它例子}
+\section{数据集}
 \label{sec:other}
 
 在第~\ref{cha:intro} 章中我们学习了贝叶斯公式~(\ref{equ:chap1:bayes})，这里我们复
@@ -36,13 +36,13 @@ jPicEdt, jaxdraw 等等。
 一般图形都是处在浮动环境中。之所以称为浮动是指最终排版效果图形的位置不一定与源文
 件中的位置对应\footnote{This is not a bug, but a feature of \LaTeX!}，这也是刚使
 用 \LaTeX{} 同学可能遇到的问题。如果要强制固定浮动图形的位置，请使用 \textsf{float} 宏包，
-它提供了 \texttt{[H]} 参数。比如图~\ref{fig:xfig1}。
-\begin{figure}[H] % use float package if you want it here
-  \centering
-  \includegraphics{hello}
-  \caption{利用 Xfig 制图}
-  \label{fig:xfig1}
-\end{figure}
+%它提供了 \texttt{[H]} 参数。比如图~\ref{fig:xfig1}。
+%\begin{figure}[H] % use float package if you want it here
+%  \centering
+%  \includegraphics{hello}
+%  \caption{利用 Xfig 制图}
+%  \label{fig:xfig1}
+%\end{figure}
 
 大学之道，在明明德，在亲民，在止于至善。知止而后有定；定而后能静；静而后能安；安
 而后能虑；虑而后能得。物有本末，事有终始。知所先后，则近道矣。古之欲明明德于天
