--- a/data/paper.tex
+++ b/data/paper.tex
@@ -19,7 +19,8 @@
 \begin{enumerate}[(1)]
 \item 自适应循优 $n$ 型模糊系统及其应用研究, 国家自然科学基金面上项目（11471045），2015.01-2018.12.
 
-\item 基于稀疏成分分析的找矿信息识别，国家自然科学基金面上项目（41672323），2017.01-2020.12.\\
+\item 基于深度学习的遥感崩滑地质灾害信息提取，北京市自然科学基金（L172029），2017.10-
+2019.12.\\
 
 \end{enumerate}
 
