--- a/main.tex
+++ b/main.tex
@@ -9,9 +9,11 @@
 
 % 所有其它可能用到的包都统一放在这里，可以根据实际需要添加或者删除。
 \usepackage{bnutils}
-
+\usepackage{mathtools}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
 % \def\myname{薛瑞尼}
+
 
 \begin{document}
 % 定义所有的eps文件在figures子目录下
