--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -561,3 +561,24 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2016},
   publisher={Elsevier}
 }
+
+@article{zadeh1965fuzzy,
+  title={Fuzzy sets},
+  author={Zadeh, Lotfi A},
+  journal={Information and control},
+  volume={8},
+  number={3},
+  pages={338--353},
+  year={1965},
+  publisher={Elsevier}
+}
+
+@article{jiang2018enhanced,
+  title={Enhanced IT2FCM algorithm using object-based triangular fuzzy set modeling for remote-sensing clustering},
+  author={Jiang, Tao and Hu, Dan and Yu, Xianchuan},
+  journal={Computers \& geosciences},
+  volume={118},
+  pages={14--26},
+  year={2018},
+  publisher={Elsevier}
+}
